--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,17 +18,26 @@ jobs:
               with:
                   node-version: ${{ matrix.nodejs }}
 
+            - run: echo "::add-path::$(yarn global bin)"
+
             - name: Install
-              run: yarn --frozen-lockfile
+              run: |-
+                  yarn --frozen-lockfile;
+                  yarn global add nyc;
+
+            - name: Compile
+              run: yarn build
 
             - name: Test
-              run: yarn test:coverage
+              run: nyc --include=src yarn test
+
+            - name: Benchmark
+              run: yarn bench
 
             - name: Report
-
               if: matrix.nodejs >= 14
-              run: |
-                  yarn c8 report --reporter=text-lcov > coverage.lcov
-                  bash <(curl -s https://codecov.io/bash)
+              run: |-
+                  nyc report --reporter=text-lcov > coverage.lcov;
+                  bash <(curl -s https://codecov.io/bash);
               env:
                   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
