--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
 	"license": "MIT",
 	"author": {
 		"name": "Marais Rossouw",
-		"email": "hi@marais.io",
+		"email": "me@marais.dev",
 		"url": "https://marais.io"
 	},
 	"exports": {
-		".": {
-			"import": "./dist/index.mjs",
-			"require": "./dist/index.js"
-		}
+		".": [
+			{
+				"import": "./dist/index.mjs",
+				"require": "./dist/index.js"
+			},
+			"./dist/index.js"
+		]
 	},
 	"main": "dist/index.js",
 	"unpkg": "dist/index.min.js",
@@ -48,26 +51,26 @@
 	},
 	"devDependencies": {
 		"@marais/tsconfig": "^0.0.1",
-		"@rollup/plugin-node-resolve": "8.4.0",
-		"@types/benchmark": "^1.0.33",
-		"@types/node": "^14.0.25",
+		"@rollup/plugin-node-resolve": "10.0.0",
+		"@types/benchmark": "^2.1.0",
+		"@types/node": "^14.14.6",
 		"benchmark": "^2.1.4",
-		"fetch-multipart-graphql": "^2.0.1",
-		"node-fetch": "^2.6.0",
-		"prettier": "^2.0.5",
-		"rollup": "2.23.0",
-		"rollup-plugin-terser": "6.1.0",
-		"rollup-plugin-typescript2": "0.27.1",
-		"ts-node": "^8.10.2",
-		"typescript": "^3.9.7",
-		"uvu": "^0.3.0",
+		"fetch-multipart-graphql": "^2.1.0",
+		"node-fetch": "^2.6.1",
+		"prettier": "^2.1.2",
+		"rollup": "2.33.1",
+		"rollup-plugin-terser": "7.0.2",
+		"rollup-plugin-typescript2": "0.29.0",
+		"ts-node": "^9.0.0",
+		"typescript": "^4.0.5",
+		"uvu": "^0.4.0",
 		"web-streams-polyfill": "^3.0.0"
 	},
 	"engines": {
 		"node": ">=10"
 	},
 	"volta": {
-		"node": "14.5.0",
-		"yarn": "1.22.4"
+		"node": "15.0.1",
+		"yarn": "1.22.5"
 	}
 }
