--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
 	"ts-node": {
 		"transpileOnly": true,
 		"compilerOptions": {
-			"module": "commonjs"
+			"module": "commonjs",
+			"sourceMap": true
 		},
 		"include": [
 			"test/**/*"
