--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
 		"@types/node-fetch": "^2.5.7",
 		"benchmark": "^2.1.4",
 		"fetch-multipart-graphql": "^2.2.0",
+		"it-multipart": "^1.0.5",
 		"node-fetch": "^2.6.1",
-		"playwright": "^1.5.2",
 		"polka": "^0.5.2",
 		"prettier": "^2.1.2",
 		"rollup": "2.33.1",
