feat: get some types for import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 		"target": "ES2019",
 		"declaration": true,
 		"declarationDir": "types",
+		"removeComments": false,
 		"lib": [
 			"DOM",
 			"ESNext"
