--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
 	"main": "dist/node.js",
 	"unpkg": "dist/browser.min.js",
 	"module": "dist/node.mjs",
-	"types": "types/index.d.ts",
+	"types": "index.d.ts",
 	"files": [
-		"dist",
-		"types"
+		"dist"
 	],
 	"scripts": {
 		"bench": "node -r ts-node/register bench/index.ts",
