--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
 	},
 	"extends": "@marais/tsconfig",
 	"compilerOptions": {
+		"rootDir": "src",
+		"outDir": "dist",
 		"target": "ES2019",
 		"declaration": true,
 		"declarationDir": "types",
@@ -19,10 +21,10 @@
 			"DOM",
 			"ESNext"
 		],
-		"outDir": "./dist"
 	},
-	"include": [
-		"src/**/*"
+	"files": [
+		"src/node.ts",
+		"src/browser.ts"
 	],
 	"exclude": [
 		"node_modules"
