test: more tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
             - name: Compile
               run: yarn build
 
+            - name: Type Check
+              run: yarn typecheck
+
             - name: Test
               run: nyc --include=src yarn test
 
