--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 		"bench": "node -r ts-node/register bench/index.ts",
 		"typecheck": "tsc --noEmit",
 		"build": "rollup -c",
-		"format": "prettier \"{*,.github/**/*}.+(yml|md)\" --write",
+		"format": "prettier \"{*,.github/**/*}.+(json|yml|md)\" --write",
 		"prepublishOnly": "yarn build",
 		"test": "uvu -r ts-node/register tests"
 	},
@@ -74,18 +74,16 @@
 		"benchmark": "2.1.4",
 		"fetch-multipart-graphql": "2.2.0",
 		"it-multipart": "1.0.5",
-		"polka": "0.5.2",
 		"prettier": "2.1.2",
 		"rollup": "2.33.1",
 		"rollup-plugin-terser": "7.0.2",
 		"rollup-plugin-typescript2": "0.29.0",
 		"ts-node": "9.0.0",
-		"tslib": "^2.0.3",
 		"typescript": "4.0.5",
 		"uvu": "0.4.1"
 	},
 	"volta": {
-		"node": "15.1.0",
+		"node": "15.2.0",
 		"yarn": "1.22.5"
 	}
 }
