--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 			"module": "commonjs",
 			"sourceMap": true
 		},
-		"include": ["test/**/*"]
+		"include": ["test/**/*", "bench/*", "src/**/*"]
 	},
 	"extends": "@marais/tsconfig",
 	"compilerOptions": {
