--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
 			"browser": "./browser/index.mjs",
 			"require": "./node/index.js"
 		},
-		"./node": {
-			"import": "./node/index.mjs",
-			"require": "./node/index.js"
-		},
 		"./browser": {
 			"import": "./browser/index.mjs",
 			"require": "./browser/index.js"
+		},
+		"./node": {
+			"import": "./node/index.mjs",
+			"require": "./node/index.js"
 		}
 	},
-	"unpkg": "browser/index.min.js",
-	"browser": "browser/index.mjs",
-	"module": "node/index.mjs",
 	"main": "node/index.js",
+	"unpkg": "browser/index.min.js",
+	"module": "node/index.mjs",
+	"browser": "browser/index.mjs",
 	"types": "index.d.ts",
 	"files": [
 		"*.d.ts",
@@ -44,11 +44,11 @@
 	],
 	"scripts": {
 		"bench": "node -r ts-node/register -r ./test/_polyfill.js bench/index.ts",
-		"typecheck": "tsc --noEmit",
 		"build": "rollup -c",
 		"format": "prettier  --write --list-different \"{*,.github/**/*}.+(json|yml|md)\"",
 		"prepublishOnly": "yarn build",
-		"test": "uvu -r ts-node/register -r ./test/_polyfill.js -i _polyfill -i mocks test"
+		"test": "uvu -r ts-node/register -r ./test/_polyfill.js -i _polyfill -i mocks test",
+		"typecheck": "tsc --noEmit"
 	},
 	"prettier": {
 		"bracketSpacing": true,
@@ -64,8 +64,8 @@
 					"*.md"
 				],
 				"options": {
-					"useTabs": false,
-					"tabWidth": 2
+					"tabWidth": 2,
+					"useTabs": false
 				}
 			}
 		]
@@ -74,21 +74,21 @@
 		"@marais/tsconfig": "0.0.1",
 		"@rollup/plugin-node-resolve": "10.0.0",
 		"@types/benchmark": "2.1.0",
-		"@types/node": "14.14.7",
+		"@types/node": "14.14.9",
 		"benchmark": "2.1.4",
 		"fetch-multipart-graphql": "2.2.0",
 		"it-multipart": "1.0.5",
-		"prettier": "2.1.2",
-		"rollup": "2.33.1",
+		"prettier": "2.2.0",
+		"rollup": "2.33.3",
 		"rollup-plugin-dts": "^1.4.14",
 		"rollup-plugin-terser": "7.0.2",
 		"rollup-plugin-typescript2": "0.29.0",
 		"ts-node": "9.0.0",
-		"typescript": "4.0.5",
+		"typescript": "4.1.2",
 		"uvu": "0.4.1"
 	},
 	"volta": {
-		"node": "15.2.0",
+		"node": "15.2.1",
 		"yarn": "1.22.5"
 	}
 }
