--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
 		"build": "rollup -c",
 		"format": "prettier  --write --list-different \"{*,.github/**/*}.+(json|yml|md)\"",
 		"prepublishOnly": "yarn build",
-		"size": "bundlesize -f \"{node,browser}/*.js\"",
 		"test": "uvu -r ts-node/register -r ./test/_polyfill.js -i _polyfill -i mocks test",
 		"typecheck": "tsc --noEmit"
 	},
@@ -78,24 +77,24 @@
 	},
 	"devDependencies": {
 		"@marais/tsconfig": "0.0.1",
-		"@rollup/plugin-node-resolve": "11.0.0",
+		"@rollup/plugin-node-resolve": "11.1.1",
 		"@types/benchmark": "2.1.0",
-		"@types/node": "14.14.12",
+		"@types/node": "14.14.22",
 		"benchmark": "2.1.4",
-		"bundlesize": "^0.18.0",
 		"fetch-multipart-graphql": "3.0.0",
-		"it-multipart": "1.0.5",
+		"it-multipart": "1.0.6",
 		"prettier": "2.2.1",
-		"rollup": "2.34.2",
-		"rollup-plugin-dts": "^2.0.0",
+		"rollup": "2.38.4",
+		"rollup-plugin-dts": "2.0.1",
+		"rollup-plugin-filesize": "9.1.0",
 		"rollup-plugin-terser": "7.0.2",
 		"rollup-plugin-typescript2": "0.29.0",
 		"ts-node": "9.1.1",
-		"typescript": "4.1.2",
+		"typescript": "4.1.3",
 		"uvu": "0.5.1"
 	},
 	"volta": {
-		"node": "15.2.1",
+		"node": "15.8.0",
 		"yarn": "1.22.5"
 	}
 }
