--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
 		"@marais/tsconfig": "0.0.1",
 		"@rollup/plugin-node-resolve": "11.1.1",
 		"@types/benchmark": "2.1.0",
-		"@types/node": "14.14.22",
+		"@types/node": "14.14.25",
 		"benchmark": "2.1.4",
 		"fetch-multipart-graphql": "3.0.0",
 		"it-multipart": "1.0.6",
@@ -93,8 +93,19 @@
 		"typescript": "4.1.3",
 		"uvu": "0.5.1"
 	},
+	"peerDependencies": {
+		"@types/node": ">=12"
+	},
+	"peerDependenciesMeta": {
+		"@types/node": {
+			"optional": true
+		}
+	},
+	"engines": {
+		"node": ">=12"
+	},
 	"volta": {
 		"node": "15.8.0",
-		"yarn": "1.22.5"
+		"yarn": "1.22.10"
 	}
 }
