--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
 	},
 	"devDependencies": {
 		"@marais/tsconfig": "0.0.1",
-		"@n1ru4l/push-pull-async-iterable-iterator": "^2.0.1",
+		"@n1ru4l/push-pull-async-iterable-iterator": "2.0.1",
 		"@rollup/plugin-node-resolve": "11.1.1",
 		"@types/benchmark": "2.1.0",
 		"@types/node": "14.14.25",
@@ -85,7 +85,7 @@
 		"fetch-multipart-graphql": "3.0.0",
 		"it-multipart": "1.0.6",
 		"prettier": "2.2.1",
-		"rollup": "2.38.4",
+		"rollup": "2.38.5",
 		"rollup-plugin-dts": "2.0.1",
 		"rollup-plugin-filesize": "9.1.0",
 		"rollup-plugin-terser": "7.0.2",
