--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
 node_modules
 .DS_Store
-*-lock.*
+*-lock.json
 *.lock
 *.log
 
-/browser
-/node
-/types
 /coverage
-
-# Yarn
-.yarn/
-/.pnp*
+/.nyc_output
 
 # Editors
 *.iml
 /.idea
 /.vscode
+
+# Code
+/browser
+/node
+/types
+/lib
