--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 		"bench": "node -r ts-node/register -r ./test/_polyfill.js bench/index.ts",
 		"build": "rollup -c",
 		"format": "prettier  --write --list-different \"{*,.github/**/*}.+(ts|json|yml|md)\"",
-		"prepublishOnly": "yarn build",
+		"prepublishOnly": "pnpm run build",
 		"test": "uvu -r ts-node/register -r ./test/_polyfill.js -i _polyfill -i mocks test",
 		"typecheck": "tsc --noEmit"
 	},
@@ -66,10 +66,12 @@
 		"overrides": [
 			{
 				"files": [
-					"*.md"
+					"*.md",
+					"*.yml"
 				],
 				"options": {
 					"tabWidth": 2,
+					"printWidth": 120,
 					"useTabs": false
 				}
 			}
@@ -78,19 +80,20 @@
 	"devDependencies": {
 		"@marais/tsconfig": "0.0.1",
 		"@n1ru4l/push-pull-async-iterable-iterator": "2.1.4",
-		"@rollup/plugin-node-resolve": "11.2.1",
+		"@rollup/plugin-node-resolve": "13.0.0",
 		"@types/benchmark": "2.1.0",
-		"@types/node": "14.14.41",
+		"@types/node": "15.6.0",
 		"benchmark": "2.1.4",
 		"fetch-multipart-graphql": "3.0.0",
 		"it-multipart": "1.0.9",
-		"prettier": "2.2.1",
-		"rollup": "2.45.2",
-		"rollup-plugin-dts": "3.0.1",
+		"prettier": "2.3.0",
+		"rollup": "2.48.0",
+		"rollup-plugin-dts": "3.0.2",
 		"rollup-plugin-filesize": "9.1.1",
 		"rollup-plugin-terser": "7.0.2",
 		"rollup-plugin-typescript2": "0.30.0",
 		"ts-node": "9.1.1",
+		"tslib": "^2.2.0",
 		"typescript": "4.2.4",
 		"uvu": "0.5.1"
 	},
@@ -106,7 +109,6 @@
 		"node": ">=12"
 	},
 	"volta": {
-		"node": "16.0.0",
-		"yarn": "1.22.10"
+		"node": "16.2.0"
 	}
 }
