--- a/examples/relay-with-helix/.babelrc
+++ b/examples/relay-with-helix/.babelrc
@@ -1,15 +1,3 @@
 {
-	"presets": [
-		"@babel/preset-react",
-		[
-			"@babel/preset-env",
-			{
-				"useBuiltIns": "usage",
-				"targets": "defaults, not ie 11, not ie_mob 11"
-			}
-		]
-	],
-	"plugins": [
-		"relay"
-	]
+	"plugins": ["relay"]
 }
