--- a/examples/relay-with-helix/package.json
+++ b/examples/relay-with-helix/package.json
@@ -3,8 +3,8 @@
 	"private": true,
 	"version": "0.0.1",
 	"scripts": {
-		"relay": "relay-compiler --src ./app --schema ./schema.graphql --extensions js jsx",
-		"start": "concurrently -k \"parcel -p 8080 app/index.html\" \"node server.js\""
+		"relay": "relay-compiler --src ./app --schema ./schema.graphql --language typescript",
+		"start": "concurrently -k \"parcel serve --port 8080 index.html\" \"node server.js\""
 	},
 	"browserslist": [
 		"defaults",
@@ -12,35 +12,32 @@
 		"not IE_Mob 11"
 	],
 	"dependencies": {
-		"@polka/parse": "^1.0.0-next.8",
+		"@polka/parse": "1.0.0-next.15",
 		"body-parser": "^1.19.0",
-		"core-js": "^3.7.0",
+		"core-js": "^3.13.1",
 		"cors": "^2.8.5",
 		"graphql": "15.4.0-experimental-stream-defer.1",
-		"graphql-helix": "^0.3.0",
-		"meros": "^1.0.0-beta.10",
+		"graphql-helix": "^1.6.1",
+		"meros": "^1.1.4",
 		"morgan": "^1.10.0",
-		"polka": "^1.0.0-next.11",
-		"react": "0.0.0-experimental-4ead6b530",
-		"react-dom": "0.0.0-experimental-4ead6b530",
-		"react-relay": "0.0.0-experimental-183bdd28",
-		"relay-compiler": "0.0.0-master-c45f540f",
-		"relay-runtime": "0.0.0-master-817590d4",
-		"rxjs": "^7.0.0-beta.8"
-	},
-	"resolutions": {
-		"react-relay": "0.0.0-experimental-183bdd28",
-		"relay-runtime": "0.0.0-master-817590d4"
+		"polka": "1.0.0-next.15",
+		"react": "0.0.0-experimental-44cdfd6b7",
+		"react-dom": "0.0.0-experimental-44cdfd6b7",
+		"react-relay": "^11.0.2",
+		"relay-compiler": "^11.0.2",
+		"relay-runtime": "^11.0.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.3",
-		"@babel/plugin-transform-runtime": "^7.12.1",
-		"@babel/preset-env": "^7.12.1",
-		"@babel/preset-react": "^7.12.5",
-		"@types/react-relay": "^7.0.17",
-		"@types/relay-runtime": "^10.0.10",
-		"babel-plugin-relay": "^0.0.0-master-c45f540f",
-		"concurrently": "^5.3.0",
-		"parcel-bundler": "^1.12.4"
+		"@babel/core": "^7.14.3",
+		"@marais/tsconfig": "^0.0.1",
+		"@rollup/plugin-babel": "^5.3.0",
+		"@types/react-relay": "^11.0.1",
+		"@types/relay-runtime": "^11.0.0",
+		"@vitejs/plugin-react-refresh": "^1.3.3",
+		"babel-plugin-relay": "^11.0.2",
+		"concurrently": "^6.2.0",
+		"parcel": "^2.0.0-beta.3.1",
+		"relay-compiler-language-typescript": "^14.0.0",
+		"typescript": "^4.3.2"
 	}
 }
