--- a/examples/relay-with-helix/package.json
+++ b/examples/relay-with-helix/package.json
@@ -3,41 +3,36 @@
 	"private": true,
 	"version": "0.0.1",
 	"scripts": {
-		"relay": "relay-compiler --src ./app --schema ./schema.graphql --language typescript",
-		"start": "concurrently -k \"parcel serve --port 8080 index.html\" \"node server.js\""
+		"relay": "relay-compiler-experimental relay.json",
+		"start": "tsm server.ts"
 	},
-	"browserslist": [
-		"defaults",
-		"not IE 11",
-		"not IE_Mob 11"
-	],
+	"engines": {
+		"node": ">=16.11"
+	},
 	"dependencies": {
-		"@polka/parse": "1.0.0-next.15",
-		"body-parser": "^1.19.0",
-		"core-js": "^3.13.1",
-		"cors": "^2.8.5",
+		"@polka/parse": "1.0.0-next.21",
+		"@polka/send": "1.0.0-next.15",
 		"graphql": "15.4.0-experimental-stream-defer.1",
-		"graphql-helix": "^1.6.1",
-		"meros": "^1.1.4",
-		"morgan": "^1.10.0",
-		"polka": "1.0.0-next.15",
+		"graphql-helix": "1.8.3",
+		"meros": "1.1.4",
+		"polka": "1.0.0-next.22",
 		"react": "0.0.0-experimental-44cdfd6b7",
 		"react-dom": "0.0.0-experimental-44cdfd6b7",
-		"react-relay": "^11.0.2",
-		"relay-compiler": "^11.0.2",
-		"relay-runtime": "^11.0.2"
+		"react-relay": "0.0.0-main-2219c43b",
+		"relay-runtime": "0.0.0-main-2219c43b"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.14.3",
-		"@marais/tsconfig": "^0.0.1",
-		"@rollup/plugin-babel": "^5.3.0",
-		"@types/react-relay": "^11.0.1",
-		"@types/relay-runtime": "^11.0.0",
-		"@vitejs/plugin-react-refresh": "^1.3.3",
-		"babel-plugin-relay": "^11.0.2",
-		"concurrently": "^6.2.0",
-		"parcel": "^2.0.0-beta.3.1",
-		"relay-compiler-language-typescript": "^14.0.0",
-		"typescript": "^4.3.2"
+		"@marais/tsconfig": "0.0.1",
+		"@types/react-relay": "11.0.2",
+		"@types/relay-runtime": "12.0.0",
+		"@vitejs/plugin-react-refresh": "1.3.6",
+		"relay-compiler-experimental": "0.0.0-main-2219c43b",
+		"tsm": "2.1.2",
+		"typescript": "4.4.4",
+		"vite": "2.6.10",
+		"vite-plugin-relay": "1.0.6"
+	},
+	"volta": {
+		"node": "16.11.1"
 	}
 }
