--- a/examples/relay-with-helix/package.json
+++ b/examples/relay-with-helix/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"version": "0.0.1",
 	"scripts": {
-		"relay": "relay-compiler-experimental relay.json",
+		"relay": "relay-compiler relay.json",
 		"start": "tsm server.ts"
 	},
 	"engines": {
@@ -13,26 +13,26 @@
 		"@polka/parse": "1.0.0-next.21",
 		"@polka/send": "1.0.0-next.15",
 		"graphql": "15.4.0-experimental-stream-defer.1",
-		"graphql-helix": "1.8.3",
+		"graphql-helix": "1.10.2",
 		"meros": "1.1.4",
 		"polka": "1.0.0-next.22",
-		"react": "0.0.0-experimental-44cdfd6b7",
-		"react-dom": "0.0.0-experimental-44cdfd6b7",
-		"react-relay": "0.0.0-main-2219c43b",
-		"relay-runtime": "0.0.0-main-2219c43b"
+		"react": "18.0.0-beta-149b420f6-20211119",
+		"react-dom": "18.0.0-beta-149b420f6-20211119",
+		"react-relay": "0.0.0-main-2d5d60fc",
+		"relay-runtime": "0.0.0-main-2d5d60fc"
 	},
 	"devDependencies": {
 		"@marais/tsconfig": "0.0.1",
 		"@types/react-relay": "11.0.2",
 		"@types/relay-runtime": "12.0.0",
 		"@vitejs/plugin-react-refresh": "1.3.6",
-		"relay-compiler-experimental": "0.0.0-main-2219c43b",
-		"tsm": "2.1.2",
-		"typescript": "4.4.4",
-		"vite": "2.6.10",
-		"vite-plugin-relay": "1.0.6"
+		"relay-compiler": "0.0.0-main-2d5d60fc",
+		"tsm": "2.1.4",
+		"typescript": "4.5.2",
+		"vite": "2.6.14",
+		"vite-plugin-relay": "1.0.7"
 	},
 	"volta": {
-		"node": "16.11.1"
+		"node": "16.13.0"
 	}
 }
