--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -10,13 +10,13 @@
 	},
 	"dependencies": {
 		"meros": "1.1.4",
-		"piecemeal": "^0.0.2",
+		"piecemeal": "^0.0.3",
 		"polka": "1.0.0-next.22"
 	},
 	"devDependencies": {
 		"@marais/tsconfig": "0.0.1",
-		"tsm": "2.1.2",
-		"typescript": "4.5.0-dev.20211020",
-		"vite": "2.6.10"
+		"tsm": "2.2.1",
+		"typescript": "4.5.2",
+		"vite": "2.6.14"
 	}
 }
