--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "meros",
-	"version": "1.1.4",
-	"description": "A fast 610B utility that makes reading multipart responses simple",
+	"version": "1.2.0",
+	"description": "A fast 626B utility that makes reading multipart responses simple",
 	"keywords": [
 		"defer",
 		"fetch",
@@ -22,9 +22,18 @@
 	"sideEffects": false,
 	"exports": {
 		".": {
-			"import": "./node/index.mjs",
-			"browser": "./browser/index.mjs",
-			"require": "./node/index.js"
+			"browser": {
+				"import": "./browser/index.mjs",
+				"require": "./browser/index.js"
+			},
+			"node": {
+				"import": "./node/index.mjs",
+				"require": "./node/index.js"
+			},
+			"default": {
+				"import": "./node/index.mjs",
+				"require": "./node/index.js"
+			}
 		},
 		"./browser": {
 			"import": "./browser/index.mjs",
