--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
 	],
 	"scripts": {
 		"bench": "node -r tsm -r ./test/_polyfill.ts bench/index.ts",
-		"build": "rollup -c",
+		"build": "bundt --minify",
 		"format": "prettier --write --list-different \"{*,examples/*/**,.github/**/*}.+(ts|tsx|json|yml|md)\"",
 		"prepublishOnly": "pnpm run build",
 		"test": "uvu test \".spec.ts$\" -r tsm -r test/_polyfill.ts -i suites",
@@ -69,6 +69,7 @@
 		"@n1ru4l/push-pull-async-iterable-iterator": "3.2.0",
 		"@rollup/plugin-node-resolve": "13.1.3",
 		"@types/node": "17.0.21",
+		"bundt": "2.0.0-next.2",
 		"prettier": "2.5.1",
 		"rollup": "2.68.0",
 		"rollup-plugin-dts": "4.1.0",
