--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,20 @@
 {
-	"ts-node": {
-		"transpileOnly": true,
-		"compilerOptions": {
-			"module": "commonjs",
-			"sourceMap": true
-		},
-		"include": ["test/**/*", "bench/*", "src/**/*"]
-	},
 	"extends": "@marais/tsconfig",
 	"compilerOptions": {
-		"rootDir": ".",
-		"outDir": "dist",
+		"noEmit": true,
 		"target": "ES2019",
 		"declaration": false,
 		"removeComments": false,
-		"lib": ["DOM", "ESNext"]
+		"lib": ["DOM", "ESNext"],
+		"baseUrl": ".",
+		"paths": {
+			"meros": ["./index.d.ts"]
+		}
 	},
-	"files": ["src/node.ts", "src/browser.ts"],
+	"include": [
+		"src/**/*.ts",
+		"src/**/*.d.ts",
+		"index.d.ts"
+	],
 	"exclude": ["node_modules"]
 }
