--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [14, 16, 17]
+        node: [14, 16, 17, 18]
     steps:
       - uses: actions/checkout@main
 
       - name: (env) setup pnpm
         uses: pnpm/action-setup@v2.0.1
         with:
-          version: 6.32.4
+          version: 6.32.9
 
       - name: (env) setup node v${{ matrix.node }}
         uses: actions/setup-node@main
@@ -31,10 +31,10 @@ jobs:
         run: pnpm install
 
       - name: Compiles
-        run: pnpm run build
+        run: pnpm build
 
       - name: Test
         run: pnpm test
 
       - name: Check Types
-        run: pnpm run typecheck
+        run: pnpm typecheck
