--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -9,14 +9,14 @@
 		"node": ">=16.11"
 	},
 	"dependencies": {
-		"meros": "1.1.4",
-		"piecemeal": "^0.0.5",
+		"meros": "workspace:*",
+		"piecemeal": "^0.1.0",
 		"polka": "1.0.0-next.22"
 	},
 	"devDependencies": {
-		"@marais/tsconfig": "0.0.2",
-		"tsm": "2.2.1",
-		"typescript": "4.5.4",
-		"vite": "2.7.6"
+		"@marais/tsconfig": "0.0.4",
+		"tsm": "2.3.0",
+		"typescript": "5.0.4",
+		"vite": "4.3.7"
 	}
 }
