--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [14, 16, 17, 18]
+        node: [16, 18, 20]
     steps:
       - uses: actions/checkout@main
 
       - name: (env) setup pnpm
-        uses: pnpm/action-setup@v2.0.1
+        uses: pnpm/action-setup@v2.2.4
         with:
-          version: 7.0.1
+          version: 8.5.1
 
       - name: (env) setup node v${{ matrix.node }}
         uses: actions/setup-node@main
@@ -31,10 +31,10 @@ jobs:
         run: pnpm install
 
       - name: Compiles
-        run: pnpm build
+        run: pnpm run build
 
       - name: Test
-        run: pnpm test
+        run: pnpm run test
 
       - name: Check Types
-        run: pnpm typecheck
+        run: pnpm run typecheck
